adding calculation in backend + total weight in cart